examples/fail/tuple_member1.niu
fn main() -> void {
  let xyz = (0, 1, 2);
  let a = xyz.3;
}
